--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 before_install:
   - gem install bundler -v '~> 2.0'
 rvm:
-  - 2.4.4
-  - 2.5.3
-  - 2.6.0
-  - jruby
+  - 2.4.6
+  - 2.5.5
+  - 2.6.3
+  - jruby-head
